--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
 name: Deploy
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["SonarCloud"] # this usually takes the longest
+    types:
+      - completed
 
 jobs:
   check-workflow-status:
